# shuup-graphql

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  setup.cfg  setup.py  test_requirements.in  test_requirements.txt
shuup_graphql/: __init__.py  apps.py  settings.py  urls.py  views.py
shuup_graphql/admin/: __init__.py
shuup_graphql/admin/mutations/: __init__.py
shuup_graphql/admin/queries/: __init__.py  _users.py
shuup_graphql/front/: __init__.py
shuup_graphql/front/mutations/: __init__.py  _basket.py  _category.py  _product.py
shuup_graphql/front/queries/: __init__.py  _basket.py  _category.py  _manufacturer.py  _product.py  _shop_product.py  _supplier.py  _user.py
shuup_graphql/front/types/: address.py  basket.py  category.py  contact.py  filer.py  manufacturer.py  price.py  product.py  product_media.py  sales_unit.py  shop.py  shop_product.py  supplier.py  user.py
shuup_graphql/front/utils/: filer.py  shop_product.py
shuup_graphql_tests/: settings.py  urls.py
shuup_graphql_tests/admin/: test_queries.py
shuup_graphql_tests/front/: test_basket.py  test_category.py  test_manufacturer.py  test_shop_products.py  test_user.py
