[tool:pytest]
DJANGO_SETTINGS_MODULE=shuup_graphql_tests.settings
django_find_project=false
norecursedirs=.git venv

[metadata]
description-file = README.md

[flake8]
exclude = .git,__pycache__,settings.py
max-complexity = 20
max-line-length = 120

[isort]
line_length=120
indent=4
known_third_party=django,shuup,graphene_django
known_first_party=shuup_graphql
multi_line_output=5
length_sort=false
skip=venv/,.env/,env

[coverage:run]
branch = True
source=shuup_graphql/

[coverage:html]
directory = coverage
